# falcon

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  test.sh  try.sh
docs/: AUTHORS.md  internal.md  manual.md  todo.md
lib/: builtin.c  falcon.h  runtime.c  stdlib.y
src/: go.mod  main.go
src/ast/: ArrayExpr.java  AssignExpr.java  AssignStmt.java  AstDecl.java  AstDotWriter.java  AstExpr.java  AstFunc.java  AstNode.java  AstPrinter.java  AstStmt.java  AstUtils.java  AstWalker.java  BUILD.bazel  BinaryExpr.java  BlockDecl.java  BoolExpr.java  BreakStmt.java  ByteExpr.java  CharExpr.java  ContinueStmt.java  DefVarStmt.java  DoubleExpr.java  FloatExpr.java  ForStmt.java  FuncCallExpr.java  FuncDecl.java  IfStmt.java  IndexExpr.java  IntExpr.java  LongExpr.java  NullExpr.java  ReturnStmt.java  RootDecl.java  ShortExpr.java  SimpleStmt.java  StrExpr.java  TernaryExpr.java  Token.java  TokenKind.java  UnaryExpr.java  (+8 more)
src/compile/: BUILD.bazel  Compiler.java  compiler.go
src/compile/codegen/: BUILD.bazel  arch_x86.go  asm_x86.go  lir.go  lower_x86.go  lsra.go  lsra_interval.go  lsra_moveResolver.go  register_x86.go
src/compile/ssa/: BUILD.bazel  Block.java  BlockHint.java  BlockKind.java  Func.java  Op.java  Value.java  domtree.go  graph.go  hir.go  loop.go  optimize.go
src/parser/: Infer.java  Lexer.java  Parser.java
src/test/: BUILD.bazel  algorithm_test.go  bit_test.go  code_test.go  func_test.go  goal.y  object.y  parser_test.go  stdlib_test.go  type_test.go
src/type/: Type.java  TypeKind.java
src/utils/: BUILD.bazel  Utils.java  bitmap.go  set.go  slice_helper.go  util.go
