load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compile",
    srcs = ["compiler.go"],
    importpath = "falcon/compile",
    visibility = ["//visibility:public"],
    deps = [
        "//ast",
        "//compile/codegen",
        "//compile/ssa",
        "//utils",
    ],
)
