load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ssa",
    srcs = [
        "graph.go",
        "optimize.go",
        "hir.go",
    ],
    importpath = "falcon/compile/ssa",
    visibility = ["//visibility:public"],
    deps = [
        "//ast",
        "//utils",
    ],
)
